Update to 2.0 engine and translator, rev to 2.0-SNAPSHOT, fix tests